force-app/main/default/objects/SBQQ__SummaryVariable__c/fields/SBQQ__AggregateField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AggregateField__c</fullName>
        <description>Quote Line field that&#39;s acted upon by the aggregate function.</description>
        <inlineHelpText>Quote Line field that&#39;s acted upon by the aggregate function.</inlineHelpText>
        <label>Aggregate Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>Total_Discount_Per_Volume__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__StartDate__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__EndDate__c</fullName>
                </value>
                <value>
                    <fullName>Quantity_For_Discount__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__RegularTotal__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__NetTotal__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__ListTotal__c</fullName>
                </value>
                <value>
                    <fullName>Pro_Rated_Net_Amount__c</fullName>
                </value>
                <value>
                    <fullName>Account_ACV__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>