force-app/main/default/objects/SBQQ__SummaryVariable__c/fields/SBQQ__FilterField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FilterField__c</fullName>
        <description>Items that are filtered for inclusion in this summary variable.</description>
        <inlineHelpText>Select the field to use when filtering items for inclusion in this summary variable.</inlineHelpText>
        <label>Filter Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Code</fullName>
                </value>
                <value>
                    <fullName>Product Family</fullName>
                </value>
                <value>
                    <fullName>SBQQ__StartDate__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__EndDate__c</fullName>
                </value>
                <value>
                    <fullName>Is_UiPath_Core_Product_Or_Non_Production__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__ProductName__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>