force-app/main/default/objects/SBQQ__SummaryVariable__c/fields/SBQQ__TargetObject__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TargetObject__c</fullName>
        <description>Name of object being summarized.</description>
        <inlineHelpText>Select the object you want to aggregate.</inlineHelpText>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote Line</fullName>
                </value>
                <value>
                    <fullName>Product Option</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>